--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,7 +44,7 @@ h1 {
 /* headerはここ */
 
 header {
-  background-image: url('../img/main kai2.jpg');
+  background-image: url(img/main kai2.jpg);
   height: 450px;
   padding-top: 30px;
 }
@@ -147,7 +147,7 @@ nav li {
 .lineup {
   padding: 30px;
     background-size: cover;
-    background-image: url('../img/main2.png');
+    background-image: url(img/main2.png);
 }
 
 .lineup h2 {
