--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,7 +44,8 @@ h1 {
 /* headerはここ */
 
 header {
-  background-image: url(img/main kai2.jpg);
+  background-image: url(img/main kai2.png);
+  height: 450px;
   padding-top: 30px;
 }
 
