--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,7 @@ body {
 h1 {
   color: #000000;/* フォントの色を指定する */
   font-size: 70px;/* フォントの大きさを指定する */
-  font-family:s;
+  font-family:arial;
   text-align: center;/* 文字・画像を中央にそろえる */
   background-image: url(img/frame.png);/* 背景画像を指定する */
   height: 320px;/* 高さを指定する */
